deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quizproject
  labels:
    app.kubernetes.io/part-of: quizproject
